# innoter

./: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: linters.yml
innoter/: settings.py  urls.py
pages/: models.py  serializer.py  urls.py  views.py
posts/: models.py  urls.py
